<resources>
    <string name="app_name">GoTalk</string>
    <string name="sign_in_with_google">Sign in with Google</string>
    <string name="sign_in_with_facebook">Sign in with Facebook</string>
    <string name="sign_in_with_apple">Sign in with Apple</string>
    <string name="or">or</string>
    <string name="continue_with_phone_number">Continue with phone number</string>
    <string name="already_have_an_account">Already have an account?</string>
    <string name="sign_up_here">Sign up here</string>
    <string name="enter_your_gmail_address">Enter your gmail address</string>
    <string name="enter_your_password">Enter your password</string>
    <string name="forgot_password"><u>Forgot password?</u></string>
    <string name="sign_in">Sign in</string>
    <string name="back">Back</string>
    <string name="profile">Profile</string>
    <string name="enter_your_full_name">Enter your full name</string>
    <string name="enter_your_mood">Enter your mood</string>
    <string name="complete">Complete</string>
    <string name="personName">%1$s</string>
    <string name="message">Message</string>
    <string name="server_client_id">919234681341-vlil986dkb6nh8rn8knp3ve6v1f6v7q8.apps.googleusercontent.com</string>
    <string name="facebook_app_id">855960398546613</string>
    <string name="fb_login_protocol_scheme">fb855960398546613</string>
    <string name="lastMessageTime">%1$d %2$s ago</string>
    <string name="chat">Chat</string>
    <string name="dialogs">Dialogs</string>
</resources>