<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/labelGoTalk"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="70dp"
        android:text="@string/app_name"
        android:textSize="60sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.cardview.widget.CardView
        android:id="@+id/signInGoogle"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_marginStart="28dp"
        android:layout_marginTop="70dp"
        android:layout_marginEnd="28dp"
        app:cardCornerRadius="8dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/labelGoTalk">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:backgroundTint="@android:color/white"
            android:drawablePadding="38dp"
            android:gravity="center"
            android:text="@string/sign_in_with_google"
            android:textSize="16sp"
            app:drawableStartCompat="@drawable/ic_google" />
    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:id="@+id/signInFacebook"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_marginStart="28dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="28dp"
        app:cardCornerRadius="8dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/signInGoogle">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:backgroundTint="@android:color/white"
            android:drawablePadding="38dp"
            android:gravity="center"
            android:text="@string/sign_in_with_facebook"
            android:textSize="16sp"
            app:drawableStartCompat="@drawable/ic_facebook" />

    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:id="@+id/signInApple"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_marginStart="28dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="28dp"
        app:cardCornerRadius="8dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/signInFacebook">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:backgroundTint="@android:color/white"
            android:drawablePadding="38dp"
            android:gravity="center"
            android:text="@string/sign_in_with_apple"
            android:textSize="16sp"
            app:drawableStartCompat="@drawable/ic_apple" />

    </androidx.cardview.widget.CardView>

    <View
        android:id="@+id/leftRectangle"
        android:layout_width="100dp"
        android:layout_height="1dp"
        android:layout_marginStart="60dp"
        android:layout_marginTop="40dp"
        android:background="@android:color/black"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/signInApple" />

    <View
        android:id="@+id/rightRectangle"
        android:layout_width="100dp"
        android:layout_height="1dp"
        android:layout_marginTop="40dp"
        android:layout_marginEnd="60dp"
        android:background="@android:color/black"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/signInApple" />

    <TextView
        android:id="@+id/labelOr"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="28dp"
        android:text="@string/or"
        android:textSize="17sp"
        app:layout_constraintEnd_toStartOf="@id/rightRectangle"
        app:layout_constraintStart_toEndOf="@id/leftRectangle"
        app:layout_constraintTop_toBottomOf="@id/signInApple" />

    <androidx.cardview.widget.CardView
        android:id="@+id/continueWithPhone"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_marginStart="28dp"
        android:layout_marginTop="30dp"
        android:layout_marginEnd="28dp"
        app:cardCornerRadius="8dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/labelOr">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:backgroundTint="@android:color/white"
            android:gravity="center"
            android:text="@string/continue_with_phone_number"
            android:textSize="16sp" />
    </androidx.cardview.widget.CardView>

    <TextView
        android:id="@+id/labelAlreadyHaveAnAccount"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="55dp"
        android:text="@string/already_have_an_account"
        android:textSize="14sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/continueWithPhone" />

    <TextView
        android:id="@+id/signUpHere"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:text="@string/sign_up_here"
        android:textColor="@color/colorPrimary"
        android:textSize="14sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/labelAlreadyHaveAnAccount" />


</androidx.constraintlayout.widget.ConstraintLayout>