<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <include
        android:id="@+id/back"
        layout="@layout/back_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="18dp"
        android:layout_marginTop="18dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/labelProfile"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/profile"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@id/back"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@id/back" />

    <ImageView
        android:id="@+id/avatar"
        android:layout_width="190dp"
        android:layout_height="190dp"
        android:layout_marginTop="50dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/labelProfile"
        tools:ignore="ContentDescription"
        tools:src="@drawable/circle_background" />

    <ImageButton
        android:id="@+id/editAvatar"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:background="@drawable/circle_background"
        android:backgroundTint="@color/colorPrimary"
        android:scaleType="centerInside"
        android:src="@drawable/ic_pencil"
        app:layout_constraintBottom_toBottomOf="@id/avatar"
        app:layout_constraintEnd_toEndOf="@id/avatar"
        tools:ignore="ContentDescription" />

    <EditText
        android:id="@+id/inputMood"
        android:layout_width="0dp"
        android:layout_height="54dp"
        android:layout_marginStart="28dp"
        android:layout_marginTop="50dp"
        android:layout_marginEnd="28dp"
        android:background="@drawable/rounded_background"
        android:hint="@string/enter_your_full_name"
        android:importantForAutofill="no"
        android:inputType="textCapSentences"
        android:paddingStart="20dp"
        android:paddingEnd="20dp"
        android:textSize="14sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/avatar" />

    <EditText
        android:id="@+id/inputStatus"
        android:layout_width="0dp"
        android:layout_height="54dp"
        android:layout_marginStart="28dp"
        android:layout_marginTop="18dp"
        android:layout_marginEnd="28dp"
        android:background="@drawable/rounded_background"
        android:hint="@string/enter_your_mood"
        android:importantForAutofill="no"
        android:inputType="textCapSentences"
        android:paddingStart="20dp"
        android:paddingEnd="20dp"
        android:textSize="14sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/inputMood" />

    <Button
        android:id="@+id/signIn"
        android:layout_width="0dp"
        android:layout_height="54dp"
        android:layout_marginStart="28dp"
        android:layout_marginEnd="28dp"
        android:layout_marginBottom="90dp"
        android:background="@drawable/rounded_background"
        android:backgroundTint="@color/colorPrimary"
        android:text="@string/complete"
        android:textAllCaps="false"
        android:textColor="@android:color/white"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>